Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.

2007-June-13 RELEASE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+All:
	merging my development with svn version

+ pcbnew:
	bug fix (problem in postscript generation due to the internationalization
		of floating point number notation )
	added tool to select layer pair and monitor active layer
	
+ eeschema
	bug fix:
		crash libedit when loading certain components (linux only)
		incomplete generation of erc file list
	


2007-June-13 UPDATE   Richard A Burton <richardaburton@gmail.com>
================================================================================
+ build:
	dynamic linking by default, use make -f makefile.gtk KICAD_STATIC_LINK=1
	  or uncomment the bit in libs.linux for static


2007-June-11 UPDATE   Richard A Burton <richardaburton@gmail.com>
================================================================================
+ build:
	removed several 2 line scripts for configuring wx builds and put them in
	  how-to-build-kicad.txt
	improved KICAD_STATIC_LINK handling so it can be overridden on the command
	  line e.g. "make -f makefile.gtk KICAD_STATIC_LINK=0"


2007-June-11 UPDATE   Dick Hollenbeck <dickelbeck@yahoo.com>
================================================================================
+ Started this change log file.


2007-June-5 UPDATE    Richard A Burton <richardaburton@gmail.com>
================================================================================
+ pcbnew:
	fixed 3d-display image export (blank box in image)
+ build:
	fixed makefile clean targets so they don't fail if already clean
	fixed wx2.6 compatibility


2007-May-25 RELEASE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ pcbnew:
	bug: problem with 3D shapes. 