@@ -4,6 +4,11 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with 
 email address.
 
+2007-June-14 UPDATE Igor Plyatov <plyatov@mail.ru>
+================================================================================
++ eeschema
+    Added sorting by value or position in to the annotation window (Thanks for patch to Andrey Fedorushkov).
+
 2007-June-13 RELEASE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 +All:
